; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/nes/extr_nes_mgt.c_nes_mgt_rq_wqes_timeout.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/nes/extr_nes_mgt.c_nes_mgt_rq_wqes_timeout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nes_vnic_mgt = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @nes_mgt_rq_wqes_timeout to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nes_mgt_rq_wqes_timeout(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.nes_vnic_mgt*, align 8
  store i64 %0, i64* %2, align 8
  %4 = load i64, i64* %2, align 8
  %5 = inttoptr i64 %4 to %struct.nes_vnic_mgt*
  store %struct.nes_vnic_mgt* %5, %struct.nes_vnic_mgt** %3, align 8
  %6 = load %struct.nes_vnic_mgt*, %struct.nes_vnic_mgt** %3, align 8
  %7 = getelementptr inbounds %struct.nes_vnic_mgt, %struct.nes_vnic_mgt* %6, i32 0, i32 1
  %8 = call i32 @atomic_set(i32* %7, i32 0)
  %9 = load %struct.nes_vnic_mgt*, %struct.nes_vnic_mgt** %3, align 8
  %10 = getelementptr inbounds %struct.nes_vnic_mgt, %struct.nes_vnic_mgt* %9, i32 0, i32 0
  %11 = call i64 @atomic_read(i32* %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %16

13:                                               ; preds = %1
  %14 = load %struct.nes_vnic_mgt*, %struct.nes_vnic_mgt** %3, align 8
  %15 = call i32 @nes_replenish_mgt_rq(%struct.nes_vnic_mgt* %14)
  br label %16

16:                                               ; preds = %13, %1
  ret void
}

declare dso_local i32 @atomic_set(i32*, i32) #1

declare dso_local i64 @atomic_read(i32*) #1

declare dso_local i32 @nes_replenish_mgt_rq(%struct.nes_vnic_mgt*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
